--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
-        <img src="https://app.123lucky.net/uploads/promotions/1659245313_65a94ec22e125b0fc01d.jpg" alt="X3ZWAf">
+        <img src="https://raw.githubusercontent.com/suwonza123/image/main/img/purple-gf3c78a4be_1920.png" alt="X3ZWAf">
       </div>
       <div class="blog-slider__content">
         <span class="blog-slider__code">สมัครใหม่รับเพิ่ม 100%</span>
